# ZMC

./: .gitignore  README.md  pyproject.toml
app/: main.py
shell/: commands.py  file_commands.py  main.py
